[gd_scene load_steps=18 format=3 uid="uid://b6dwpoi0xevlr"]

[ext_resource type="Script" path="res://src/entities/enemies/spinner_enemy.gd" id="1_1o17m"]
[ext_resource type="Script" path="res://src/components/detect_group_component.gd" id="2_ig76l"]
[ext_resource type="Script" path="res://src/components/targeting_turret_component.gd" id="3_ty85u"]
[ext_resource type="PackedScene" uid="uid://b8x51ivnnio5q" path="res://src/blender/block_parts/enemy_block.tscn" id="4_51ok7"]
[ext_resource type="PackedScene" uid="uid://clodtu8fyjjs7" path="res://src/blender/block_parts/generic_block.tscn" id="5_sc3r8"]
[ext_resource type="PackedScene" uid="uid://qnckd1chc6fm" path="res://src/blender/block_parts/cannon_block.tscn" id="6_17omv"]
[ext_resource type="Script" path="res://src/components/spawner_component.gd" id="7_27qg0"]
[ext_resource type="PackedScene" uid="uid://0qe7jtkjvfu1" path="res://src/entities/projectiles/projectile.tscn" id="8_76lgn"]
[ext_resource type="Script" path="res://src/components/timer_component.gd" id="9_wwj32"]
[ext_resource type="Script" path="res://src/components/spawner_timer_component.gd" id="10_lp5oy"]
[ext_resource type="Script" path="res://src/components/hurtbox_component.gd" id="11_5mvrx"]
[ext_resource type="Script" path="res://src/components/link_hurtbox_health_component.gd" id="11_i304l"]
[ext_resource type="Script" path="res://src/components/health_component.gd" id="12_11xrx"]
[ext_resource type="Script" path="res://src/components/knockback_component.gd" id="13_n5bca"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3friv"]
radius = 10.0

[sub_resource type="BoxShape3D" id="BoxShape3D_5islx"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_enm8j"]
size = Vector3(3, 1, 3)

[node name="SpinnerEnemy" type="RigidBody3D" groups=["enemies"]]
mass = 4.0
script = ExtResource("1_1o17m")
max_speed = 3
follow_distance = 10

[node name="DetectPlayer" type="Area3D" parent="."]
script = ExtResource("2_ig76l")
group = &"player"

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectPlayer"]
shape = SubResource("SphereShape3D_3friv")

[node name="IdleTimer" type="Timer" parent="."]

[node name="WanderTimer" type="Timer" parent="."]

[node name="TargetingTurret" type="Node3D" parent="."]
script = ExtResource("3_ty85u")
turn_speed = 1.0

[node name="EnemyBlock" parent="." instance=ExtResource("4_51ok7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_5islx")

[node name="GenericBlock" parent="." instance=ExtResource("5_sc3r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="GenericBlock2" parent="." instance=ExtResource("5_sc3r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="GenericBlock3" parent="." instance=ExtResource("5_sc3r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="GenericBlock4" parent="." instance=ExtResource("5_sc3r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="CannonBlock" parent="." instance=ExtResource("6_17omv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="SpawnerComponent" type="Node3D" parent="CannonBlock" node_paths=PackedStringArray("actor")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 0)
script = ExtResource("7_27qg0")
actor = NodePath("../..")
scene = ExtResource("8_76lgn")

[node name="CannonBlock2" parent="." instance=ExtResource("6_17omv")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0, 0)

[node name="SpawnerComponent" type="Node3D" parent="CannonBlock2" node_paths=PackedStringArray("actor")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 0)
script = ExtResource("7_27qg0")
actor = NodePath("../..")
scene = ExtResource("8_76lgn")

[node name="CannonBlock3" parent="." instance=ExtResource("6_17omv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -1)

[node name="SpawnerComponent" type="Node3D" parent="CannonBlock3" node_paths=PackedStringArray("actor")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 0)
script = ExtResource("7_27qg0")
actor = NodePath("../..")
scene = ExtResource("8_76lgn")

[node name="CannonBlock4" parent="." instance=ExtResource("6_17omv")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 1.19209e-07, 0, 1)

[node name="SpawnerComponent" type="Node3D" parent="CannonBlock4" node_paths=PackedStringArray("actor")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 0)
script = ExtResource("7_27qg0")
actor = NodePath("../..")
scene = ExtResource("8_76lgn")

[node name="TimerComponent" type="Timer" parent="."]
autostart = true
script = ExtResource("9_wwj32")
cooldowns = Array[float]([0.8])

[node name="SpawnerTimerComponent" type="Node" parent="." node_paths=PackedStringArray("timer_component", "spawner_components")]
script = ExtResource("10_lp5oy")
timer_component = NodePath("../TimerComponent")
spawner_components = [NodePath("../CannonBlock/SpawnerComponent"), NodePath("../CannonBlock2/SpawnerComponent"), NodePath("../CannonBlock3/SpawnerComponent"), NodePath("../CannonBlock4/SpawnerComponent")]

[node name="LinkHurtboxHealthComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "health_component", "hurtbox_component", "knockback_component")]
script = ExtResource("11_i304l")
actor = NodePath("..")
health_component = NodePath("../HealthComponent")
hurtbox_component = NodePath("../HurtboxComponent")
knockback_component = NodePath("../KnockbackComponent")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("12_11xrx")

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("13_n5bca")
actor = NodePath("..")

[node name="HurtboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("11_5mvrx")
actor = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent"]
shape = SubResource("BoxShape3D_enm8j")

[connection signal="group_entered" from="DetectPlayer" to="." method="_on_detect_player_group_entered"]
[connection signal="group_exited" from="DetectPlayer" to="." method="_on_detect_player_group_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
